--- a/proyecto/templates/app/index.html
+++ b/proyecto/templates/app/index.html
@@ -23,7 +23,7 @@
         <a class="navbar-brand" href="#">
             <img src="{% static 'img/unnamed.png' %}" alt="logo" style="width:150px;">
         </a>
-        <h3 class="logo_titu">   MEDICINA <br> ALTERNATIVA</h3>
+        <h3 class="logo_titu"> MEDICINA <br> ALTERNATIVA</h3>
 
         <!-- Links -->
         <ul class="navbar-nav">
@@ -45,12 +45,28 @@
         </ul>
     </nav>
 
-    {% block content%} {% endblock content%}
 
+    <br><br>
+    < <video width='1500' controls>
+        <source src='{{ MEDIA_URL }}{{ videofile }}' type='video/mp4'> Your browser does not support the video tag.
+        </video>
+        <br><br>
+        </p>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+        <script>
+            'undefined' === typeof _trfq || (window._trfq = []);
+            'undefined' === typeof _trfd && (window._trfd = []), _trfd.push({
+                    'tccl.baseHost': 'secureserver.net'
+                }), _trfd.push({
+                    'ap': 'cpsh'
+                }, {
+                    'server': 'p3plcpnl0769'
+                }) // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.
+        </script>
+        <script src='https://img1.wsimg.com/tcc/tcc_l.combined.1.0.6.min.js'></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
