--- a/proyecto/app/static/css/style.css
+++ b/proyecto/app/static/css/style.css
@@ -28,3 +28,12 @@
     margin-top: 25px;
     color: #4EBE7B;
 }
+
+.video {
+    width: '700';
+    height: '200' object-position;
+}
+
+.col-sm-4{
+    float: left;
+}
