--- a/proyecto/templates/app/index.html
+++ b/proyecto/templates/app/index.html
@@ -28,10 +28,10 @@
         <!-- Links -->
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">SOBRE MI </a>
+                <a class="nav-link" href="{% url 'app:index' %}">SOBRE MI </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">TRATAMIENTOS</a>
+                <a class="nav-link" href="{% url 'app:Tratamientos' %}">TRATAMIENTOS</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">PATOLOGÍAS</a>
@@ -47,26 +47,27 @@
 
 
     <br><br>
-    < <video width='1500' controls>
-        <source src='{{ MEDIA_URL }}{{ videofile }}' type='video/mp4'> Your browser does not support the video tag.
+    <video width='1500px' height='300px' position='sticky' controls>
+        <source src=' {{ MEDIA_URL }}{{ videofile }} ' type='video/mp4 '> Your browser does not support the video tag.
         </video>
-        <br><br>
-        </p>
+    <br><br>
 
-        <script>
-            'undefined' === typeof _trfq || (window._trfq = []);
-            'undefined' === typeof _trfd && (window._trfd = []), _trfd.push({
-                    'tccl.baseHost': 'secureserver.net'
-                }), _trfd.push({
-                    'ap': 'cpsh'
-                }, {
-                    'server': 'p3plcpnl0769'
-                }) // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.
-        </script>
-        <script src='https://img1.wsimg.com/tcc/tcc_l.combined.1.0.6.min.js'></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    {% block content%}
+	{% endblock content%}
+    <script>
+        'undefined ' === typeof _trfq || (window._trfq = []);
+        'undefined ' === typeof _trfd && (window._trfd = []), _trfd.push({
+                'tccl.baseHost ': 'secureserver.net '
+            }), _trfd.push({
+                'ap ': 'cpsh '
+            }, {
+                'server ': 'p3plcpnl0769 '
+            }) // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.
+    </script>
+    <script src='https://img1.wsimg.com/tcc/tcc_l.combined.1.0.6.min.js '></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
