--- a/proyecto/app/static/css/style.css
+++ b/proyecto/app/static/css/style.css
@@ -13,8 +13,6 @@
 
 .navbar-nav {
     margin-left: 80px;
-    /*  border: 3px solid #4EBE7B;
-    border-radius: 25px; */
     border: groove 2px rgb(155, 212, 178);
     border-radius: 70px;
     width: 1000px;
@@ -23,17 +21,46 @@
 
 .nav-link {
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     margin-left: 65px;
     margin-top: 25px;
     color: #4EBE7B;
 }
 
-.video {
-    width: '700';
-    height: '200' object-position;
+.responsiveContent {
+    position: relative;
+    height: 0;
+    overflow: hidden;
+    padding-bottom: 60.2%;
+    margin-bottom: -480px;
 }
 
-.col-sm-4{
+.responsiveContent iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+}
+
+.col-sm-4 {
     float: left;
+}
+
+.titulos {
+    text-align: center;
+    font-size: 18px;
+    margin-left: 65px;
+    margin-top: 25px;
+    color: #4EBE7B;
+}
+
+.texto_centro {
+    color: gray;
+    margin-left: 400px;
+    position: relative;
+}
+
+img {
+    border-radius: 20px;
 }
