--- a/proyecto/templates/app/index.html
+++ b/proyecto/templates/app/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Hojas de estilo -->
-    <link rel="stylesheet" href="{% static 'css/style.css'%}" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -28,7 +28,7 @@
         <!-- Links -->
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'app:index' %}">SOBRE MI </a>
+                <a class="nav-link" href="{% url 'app:sobremi' %}">SOBRE MI </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'app:Tratamientos' %}">TRATAMIENTOS</a>
@@ -45,29 +45,60 @@
         </ul>
     </nav>
 
-
-    <br><br>
-    <video width='1500px' height='300px' position='sticky' controls>
-        <source src=' {{ MEDIA_URL }}{{ videofile }} ' type='video/mp4 '> Your browser does not support the video tag.
-        </video>
-    <br><br>
-
     {% block content%}
-	{% endblock content%}
+    <br><br>
+    <div class="responsiveContent">
+        <iframe src=' {{ MEDIA_URL }}{{ videofile }} ' type='video/mp4 ' width="560" allowfullscreen="" frameborder="50|70"></iframe>
+    </div>
+    <br><br>
+
     <script>
         'undefined ' === typeof _trfq || (window._trfq = []);
         'undefined ' === typeof _trfd && (window._trfd = []), _trfd.push({
-                'tccl.baseHost ': 'secureserver.net '
-            }), _trfd.push({
-                'ap ': 'cpsh '
-            }, {
-                'server ': 'p3plcpnl0769 '
-            }) // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.
+            'tccl.baseHost ': 'secureserver.net '
+        }), _trfd.push({
+            'ap ': 'cpsh '
+        }, {
+            'server ': 'p3plcpnl0769 '
+        })
+
+
+        // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.
     </script>
+
+    {% for p in mi %}
+
+    <h5 class="titulos" href="{% url 'app:sobremi' %}">{{ p.tituloCentro }}</h5>
+    <img class="imagenCentro" src="{{ p.imagenCentro.url }}">
+    <h5 class="texto_centro" href="{% url 'app:sobremi' %}">{{ p.textoCentro }}</h5>
+
+    <h5 class="titulos" href="{% url 'app:sobremi' %} ">{{ p.tituloPerfil }}</h5>
+    <img class="imagenCentro " src="{{ p.imagenPerfil.url }} ">
+    <h5 class="texto " href="{% url 'app:sobremi' %} ">{{ p.textoPerfil }}</h5>
+    <h5 class="nav-link " href="{% url 'app:sobremi' %} ">{{ p.direccion }}</h5>
+    <h5 class="nav-link " href="{% url 'app:sobremi' %} ">{{ p.tel }}</h5>
+    <h5 class="nav-link " href="{% url 'app:sobremi' %} ">{{ p.mail }}</h5>
+
+    {% endfor %}
+
+
+
+
     <script src='https://img1.wsimg.com/tcc/tcc_l.combined.1.0.6.min.js '></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js "></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js "></script>
+
+
+
+
+
+
+
+
+
+
+    {% endblock content%}
 </body>
 
 </html>
