--- a/proyecto/templates/app/tratamientos.html
+++ b/proyecto/templates/app/tratamientos.html
@@ -1,8 +1,4 @@
-{% extends 'app/index.html' %}
-{% load static %}
-{% load bootstrap4 %}
-
-{% block content%}
+{% extends 'app/index.html' %} {% load static %} {% load bootstrap4 %} {% block content%}
 
 <div class="row row-cols-1 row-cols-md-3">
     {% for p in tra %}
