--- a/proyecto/templates/app/index.html
+++ b/proyecto/templates/app/index.html
@@ -14,40 +14,54 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/94d365e8cc.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-sm bg-white navbar-white">
-        <!-- Brand/logo -->
-        <a class="navbar-brand" href="#">
-            <img src="{% static 'img/unnamed.png' %}" alt="logo" style="width:150px;">
-        </a>
-        <h3 class="logo_titu"> MEDICINA <br> ALTERNATIVA</h3>
+  <nav class="navbar navbar-expand- navbar-default">
 
-        <!-- Links -->
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'app:sobremi' %}">SOBRE MI </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'app:Tratamientos' %}">TRATAMIENTOS</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">PATOLOGÍAS</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">BLOG</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">TESTIMONIOS</a>
-            </li>
-        </ul>
-    </nav>
+    <a class="navbar-brand d-flex align-items-center" href="{% url 'app:index' %}">
+      <img class="float-left" src="{% static 'img/unnamed.png' %}" alt="logo" style="width:120px;">
+      <h3 class="titulo_logo">Medicina<br>Alternativa</h3>
+    </a>
+
+    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon">
+        <i class="fas fa-bars" style="color:rgb(77, 184, 118); font-size:28px;">
+        </i></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="nav navbar-nav ml-auto">
+
+        <li class="nav-item">
+          <a class="nav-link" href="#">SOBRE MÍ</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'app:Tratamientos' %}">TRATAMIENTOS</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#">PATOLOGÍAS</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#">BLOG</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#">TESTIMONIOS</a>
+        </li>
+
+      </ul>
+    </div>
+  </nav>
 
     {% block content%}
-    <br><br>
-    <div class="responsiveContent">
+    <div class=".container-fluid responsiveContent">
         <iframe src=' {{ MEDIA_URL }}{{ videofile }} ' type='video/mp4 ' width="560" allowfullscreen="" frameborder="50|7000"></iframe>
     </div>
     <br><br>
@@ -69,109 +83,33 @@
     {% for p in mi %}
         
             
-        
-            <img class="imagenCentro" src="{{ p.imagenCentro.url }}">
-            
-        <div class="contenedor">
+      <div class="container-fluid contenedor">
+            <img class="imagenCentro float-left mr-5" src="{{ p.imagenCentro.url }}">
             <h5 class="titulo_centro" href="{% url 'app:sobremi' %}">{{ p.tituloCentro }}</h5><br>
             <h5 class="texto_centro" href="{% url 'app:sobremi' %}">{{ p.textoCentro }}</h5>
-        </div>
-        
+      </div>
+      <div class="container-fluid perfil d-flex align-items-center">
+            <div>
+              <h5 class="tituloPerfil" href="{% url 'app:sobremi' %} ">{{ p.tituloPerfil }}</h5>
+              <h5 class="texto_perfil float-left mr-5" href="{% url 'app:sobremi' %} "></br>{{ p.textoPerfil }}</h5>
+            </div>
             <img class="imagenPerfil rounded-circle" src="{{ p.imagenPerfil.url }}">
-        <div class="perfil">
-            <h5 class="tituloPerfil" href="{% url 'app:sobremi' %} ">{{ p.tituloPerfil }}</h5>   
-            <h5 class="texto_perfil" href="{% url 'app:sobremi' %} "></br>{{ p.textoPerfil }}</h5>
-        </div>
-    
+      </div>
   
-    
-
-    <!-- Footer -->
-<footer class="page-footer font-small blue-grey lighten-5 HFooter" style="background-color: #21d192;">
-
+      <div class="container-fluid  footer mr-5">
+   
+          <h6 class="text-uppercase font-weight-bold mr-5">Contacto</h6>
+            <p classs="iconos">
+            <i class="fas fa-home mr-5"></i>{{ p.direccion }}</p>
+            <p classs="iconos">
+            <i class="fas fa-envelope mr-5"></i>{{ p.mail }}</p>
+            <p classs="iconos">
+            <i class="fas fa-phone mr-5"></i>{{ p.tel }}</p>
+        </div>
      
-      <div class="container">
+    
+
  
-        <!-- Grid row-->
-        <div class="row py-4 d-flex align-items-center">
-  
-         
-         {% comment %}  <div class="col-md-6 col-lg-7 text-center text-md-right">
-  
-            <!-- Facebook -->
-            <a class="fb-ic">
-              <i class="fab fa-facebook-f white-text mr-4"> </i>
-            </a>
-            <!-- Twitter -->
-            <a class="tw-ic">
-              <i class="fab fa-twitter white-text mr-4"> </i>
-            </a>
-            <!-- Google +-->
-            <a class="gplus-ic">
-              <i class="fab fa-google-plus-g white-text mr-4"> </i>
-            </a>
-            <!--Linkedin -->
-            <a class="li-ic">
-              <i class="fab fa-linkedin-in white-text mr-4"> </i>
-            </a>
-            <!--Instagram-->
-            <a class="ins-ic">
-              <i class="fab fa-instagram white-text"> </i>
-            </a>
-  
-          </div>
-          <!-- Grid column -->
-  
-        </div>
-        <!-- Grid row-->
-  
-      </div> {% endcomment %}
-    </div>
-    <!-- Footer Links -->
-    <div class="container text-center text-md-left mt-5">
-  
-      <!-- Grid row -->
-      <div class="row mt-3 dark-grey-text">
-  
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-4 col-xl-3 mb-4">
-  
-          <!-- Content -->
-          <h6 class="text-uppercase font-weight-bold">Contacto</h6>
-          <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-         
-        </div>
-  
-        <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-  
-          <!-- Links -->
-         
-          <hr class="teal accent-3 mb-4 mt-0  mx-auto" style="width: 40px;">
-          <p>
-            <i class="fas fa-home mr-3"></i>{{ p.direccion }}</p>
-          <p>
-            <i class="fas fa-envelope mr-3"></i>{{ p.mail }}</p>
-          <p>
-            <i class="fas fa-phone mr-3"></i>{{ p.tel }}</p>
-  
-        </div>
-        <!-- Grid column -->
-  
-      
-  
-    </div>
-    <!-- Footer Links -->
-  
-    <!-- Copyright -->
-    <div class="footer-copyright text-center text-black-50 py-3">© 2020 Copyright
-    </div>
-    <!-- Copyright -->
-  
-  </footer>
-  <!-- Footer -->
-
-
     {% endfor %}
 
     <script src='https://img1.wsimg.com/tcc/tcc_l.combined.1.0.6.min.js '></script>
