--- a/proyecto/app/static/css/style.css
+++ b/proyecto/app/static/css/style.css
@@ -82,13 +82,10 @@
     text-decoration:underline;
     
 }
- .imagenPerfil{
-  
-    margin-left: 100px;
-} 
-/*.texto_perfil {
-    margin-top: -100px;
-}*/
+ 
+.texto_perfil {
+    color: gray;
+}
 .perfil {
     margin-top: 90px;
     width: 500px;
@@ -119,71 +116,4 @@
     margin: 0 auto;
   
     
-}
-
-@media screen and (max-width:800px) {
-    .navbar-nav {
-        width: 100%;
-        border: 0;
-        padding: 0;
-        
-    }
-    
-}
-@media screen and (max-width:800px) {
-.responsiveContent {
-    width: 100%;
-    margin-top: 60px;
-    }
-}
-@media screen and (max-width:800px) {
-    .navbar{
-      
-        text-align: center;
-    }
-    .navbar-nav{
-        margin: 0;
-    }
-    .logo_titu{
-        width: 100%;
-
-        font-size: 30px;
-       
-    }
-    .nav-link{
-    
-        font-size: 20px;
-    
-    }
-}
-@media screen and (max-width:800px) {
-    .texto_centro {
-        width: 100%;
-        font-size: 20px;
-        height: 100%;
-    }
-    .titulo_centro {
-        width: 100%;
-        font-size: 20px;
-        margin-top: 250px;
-    }
-    .imagenCentro {
-       
-        width: 100%;
-        margin-right: 100px;
-     
-    }
-}
-@media screen and (max-width:800px) {
-    .texto_perfil {
-        width: 100%;
-        font-size: 20px;
-        height: 100%;
-    }
-    .imagenPerfil{
-        width: 100%;
-        font-size: 20px;
-        flex: none;
-        justify-content: left;
-    }
 }
