Cambios en Sobre Mí

--- a/proyecto/templates/app/index.html
+++ b/proyecto/templates/app/index.html
@@ -19,10 +19,10 @@
 
 <body>
 
-  <nav class="navbar navbar-expand- navbar-default">
+  <nav class="navbar navbar-expand-xl navbar-default">
 
     <a class="navbar-brand d-flex align-items-center" href="{% url 'app:index' %}">
-      <img class="float-left" src="{% static 'img/unnamed.png' %}" alt="logo" style="width:120px;">
+      <img class="float-left" src="{% static 'img/unnamed.png' %}" alt="logo" style="width:150px;">
       <h3 class="titulo_logo">Medicina<br>Alternativa</h3>
     </a>
 
@@ -61,7 +61,40 @@
   </nav>
 
     {% block content%}
-    <div class=".container-fluid responsiveContent">
+
+<div id="demo" class="carousel slide" data-ride="carousel">
+
+    <!-- Indicators -->
+    <ul class="carousel-indicators">
+      <li data-target="#demo" data-slide-to="0" class="active"></li>
+      <li data-target="#demo" data-slide-to="1"></li>
+      <li data-target="#demo" data-slide-to="2"></li>
+    </ul>
+
+    <!-- The slideshow -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="{% static 'img/imgHol.jpg' %}" alt="Los Angeles" width="1100" height="500">
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'img/medHol2.jpg' %}" alt="Chicago" width="1100" height="500">
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'img/medHol3.png' %}" alt="New York" width="1100" height="500">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </a>
+    <a class="carousel-control-next" href="#demo" data-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </a>
+  </div>
+
+
+    {% comment %} <div class=".container-fluid responsiveContent">
         <iframe src=' {{ MEDIA_URL }}{{ videofile }} ' type='video/mp4 ' width="560" allowfullscreen="" frameborder="50|7000"></iframe>
     </div>
     <br><br>
@@ -78,7 +111,7 @@
 
 
         // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.
-    </script>
+    </script> {% endcomment %}
 
     {% for p in mi %}
         
@@ -93,17 +126,17 @@
               <h5 class="tituloPerfil" href="{% url 'app:sobremi' %} ">{{ p.tituloPerfil }}</h5>
               <h5 class="texto_perfil float-left mr-5" href="{% url 'app:sobremi' %} "></br>{{ p.textoPerfil }}</h5>
             </div>
-            <img class="col-sm-4 imagenPerfil rounded-circle" src="{{ p.imagenPerfil.url }}">
+            <img class="col-sm-2 imagenPerfil rounded-circle" src="{{ p.imagenPerfil.url }}">
       </div>
   
-      <div class="container-fluid  footer mr-5">
+      <div class="container-fluid  footer mr-5 iconos">
    
           <h6 class="text-uppercase font-weight-bold mr-5">Contacto</h6>
-            <p classs="iconos">
+            <p class="iconos">
             <i class="fas fa-home mr-5"></i>{{ p.direccion }}</p>
-            <p classs="iconos">
+            <p class="iconos">
             <i class="fas fa-envelope mr-5"></i>{{ p.mail }}</p>
-            <p classs="iconos">
+            <p class="iconos">
             <i class="fas fa-phone mr-5"></i>{{ p.tel }}</p>
         </div>
      
