--- a/proyecto/app/static/css/style.css
+++ b/proyecto/app/static/css/style.css
@@ -2,34 +2,46 @@
     margin: 0;
     padding: 0;
 }
-
-
-
-/*.logo_titu {
+.titulo_logo {
     color: #16a374;
     text-shadow: #4EBE7B 0.1em 0.1em 0.2em;
     font-style: italic;
     text-align: center;
-    font-size: 30px;
+    font-size: 40px;
+    
 }
 
-.navbar-nav {
-    margin-left: 80px;
-    border: groove 2px rgb(155, 212, 178);
-    border-radius: 70px;
-    width: 1000px;
-    height: 100px;
-}
-*/
 .nav-link {
     text-align: center;
-    font-size: 18px;
+    font-size: 20px;
     margin-left: 65px;
-    /* margin-top: 25px; */
     color: #4EBE7B;
+    font-style: italic;
+    margin-top: 40px;
 }
 
-.responsiveContent {
+.titulo-tra{
+    margin-left: 0;
+}
+
+.navbar-default{
+    background-color: #e0f2f1;
+}
+
+.navbar-brand{
+    color:rgb(77, 184, 118);
+}
+
+.navbar-brand:hover{
+    color: rgb(77, 184, 118);
+}
+
+.carousel-inner img {
+    width: 100%;
+    height: 100%;
+}
+
+/* .responsiveContent {
     position: relative;
     height: 0;
     overflow: hidden;
@@ -43,11 +55,7 @@
     left: 0;
     width: 100%;
     height: 50%;
-}
-
-.col-sm-4 {
-    float: left;
-}
+} */
 
 .titulo_centro {
     text-align: center;
@@ -60,60 +68,28 @@
 
 .texto_centro {
     color: gray;
-    /* margin-left: 400px; */
     position: relative;
 }
 
-/*img {
-    border-radius: 20px;
-}*/
-
-.contenedor {
-    margin-left: 400px;
-    margin-top: 50px;
-
-}
-/* .texto_centro {
-    margin-top: -230px;
-} */
 .tituloPerfil {
     color: #4EBE7B;
     margin-left: 180px;
     text-decoration:underline;
-    
 }
  
 .texto_perfil {
     color: gray;
 }
+
 .perfil {
-    margin-top: 90px;
-    width: 500px;
-  
+    margin-top: 150px;
+    margin-bottom: 150px;
+    /*width: 500px;**/
 }
 
- .footer{
-    background-color:#4EBE7B ;
-    width: 100%;
-    margin-top: 180px;
-  
-}
-
-
-
-.navbar-default{
-    background-color: #e0f2f1;
-}
-
-.navbar-brand{
-    color:rgb(77, 184, 118);
-}
-
-.navbar-brand:hover{
-    color: rgb(77, 184, 118);
-}
 .iconos{
+    padding-top: 15px;
+    background-color:#4EBE7B ;
     margin: 0 auto;
-  
-    
+    padding-bottom: 10px;
 }
