--- a/proyecto/templates/app/tratamientos.html
+++ b/proyecto/templates/app/tratamientos.html
@@ -4,7 +4,7 @@
     {% for p in tra %}
     <div class="col">
         <div class="col-md-12 ">
-            <h5><a class="nav-link" href="{% url 'app:index' %}">{{ p.nombre }}</a></h5>
+            <h5><a class="nav-link titulo-tra" href="{% url 'app:index' %}">{{ p.nombre }}</a></h5>
             <div class="card-deck">
                 <div class="card rounded-circle">
               
@@ -13,7 +13,6 @@
                 </div>
             </div>
         </div>
-
     </div>
     {% endfor %}
 </div>
