--- a/proyecto/templates/app/blog.html
+++ b/proyecto/templates/app/blog.html
@@ -1,43 +1,90 @@
 {% extends 'app/index.html' %} {% load static %} {% load bootstrap4 %} {% block content%}
 
-    {% for p in blog %}
-    <div class="card md-4" style="max-width: 540px;">
+<!-- *****Blog Area Start ***** -->
+<section class="dento-blog-area mt-50">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-lg-8">
+        
+        <!-- Single Blog Item -->
+        <div class="single-blog-item style-2 d-flex flex-wrap align-items-center mb-50">
+          {% for p in blog %}
+          <!-- Blog Thumbnail -->
+          <div class="blog-thumbnail">
+            <a href="#">
+              <img src="{{ p.imagen.url }}" alt="">
+            </a>
+          </div>
+          <!-- Blog Content -->
+          <div class="blog-content">
+            <a href="#" class="post-title">{{ p.titulo }}</a>
+            <p>{{ p.descripcion }}</p>
+            <div class="post-meta">
+              <a href="#"><i class="icon_clock_alt"></i>{{ p.fecha }}</a>
+            </div>
+          </div>
+          {% endfor %}
+        </div>
+        
 
-    <div class="row no-gutters">
-      <div class="col-md-4">
-        <img src="{{ p.imagen.url }}" class="card-img" alt="...">
+        <!-- Pagination -->
+        <nav class="dento-pagination mb-100">
+          <ul class="pagination">
+            <li class="page-item active"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#"><i class="fa fa-angle-right"></i></a></li>
+          </ul>
+        </nav>
       </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">{{ p.titulo }}</h5>
-          <p class="card-text">{{ p.descripcion }}This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-muted">"{{ p.fecha }}"Last updated 3 mins ago</small></p>
+
+      <!-- Dento Sidebar Area -->
+      <div class="col-12 col-lg-4">
+        <div class="dento-sidebar">
+          
+          <!-- Single Widget Area -->
+          <div class="single-widget-area news-widget">
+            <h5 class="widget-title">LOS MÁS DESTACADOS</h5>
+
+            <!-- Single News Area -->
+            <div class="single-news-area d-flex align-items-center">
+              <div class="blog-thumbnail">
+                <img src="./img/bg-img/21.jpg" alt="">
+              </div>
+              <div class="blog-content">
+                <a href="#" class="post-title">Tooth decay: why good dental hygiene is important</a>
+                <span class="post-date">28 Sep 2018</span>
+              </div>
+            </div>
+
+            <!-- Single News Area -->
+            <div class="single-news-area d-flex align-items-center">
+              <div class="blog-thumbnail">
+                <img src="./img/bg-img/22.jpg" alt="">
+              </div>
+              <div class="blog-content">
+                <a href="#" class="post-title">Six reasons your breath might smell like poop</a>
+                <span class="post-date">28 Sep 2018</span>
+              </div>
+            </div>
+
+            <!-- Single News Area -->
+            <div class="single-news-area d-flex align-items-center">
+              <div class="blog-thumbnail">
+                <img src="./img/bg-img/23.jpg" alt="">
+              </div>
+              <div class="blog-content">
+                <a href="#" class="post-title">Everything you need to know about sinus infection</a>
+                <span class="post-date">28 Sep 2018</span>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
   </div>
+</section>
+<!-- *****Blog Area End ***** -->
 
 
-
-
-
-  {% endfor %}
 {% endblock content%}
-
-
-<div class="row row-cols-1 row-cols-md-3">
-    {% for p in tra %}
-    <div class="col">
-        <div class="col-md-12 ">
-            <h5><a class="nav-link titulo-tra" href="{% url 'app:index' %}">{{ p.nombre }}</a></h5>
-            <div class="card-deck">
-                <div class="card rounded-circle">
-              
-                    <img src="{{ p.imagen.url }}">
-                
-                </div>
-            </div>
-        </div>
-    </div>
-    {% endfor %}
-</div>
