Blog lateral y navbar

--- a/proyecto/templates/app/index.html
+++ b/proyecto/templates/app/index.html
@@ -22,8 +22,8 @@
   <nav class="navbar navbar-expand-xl navbar-default">
 
     <a class="navbar-brand d-flex align-items-center" href="{% url 'app:index' %}">
-      <img class="float-left" src="{% static 'img/unnamed.png' %}" alt="logo" style="width:150px;">
-      <h3 class="titulo_logo">Medicina<br>Alternativa</h3>
+      <img class="float-left" src="{% static 'img/unnamed.png' %}" alt="logo" style="width:110px;">
+      <h2 class="titulo_logo ml-3">Medicina<br>Alternativa</h2>
     </a>
 
     <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
