--- a/proyecto/templates/app/blog.html
+++ b/proyecto/templates/app/blog.html
@@ -1,31 +1,30 @@
 {% extends 'app/index.html' %} {% load static %} {% load bootstrap4 %} {% block content%}
 
-<!-- *****Blog Area Start ***** -->
+
 <section class="dento-blog-area mt-50">
-  <div class="container">
+  <div class="container  ">
     <div class="row">
       <div class="col-12 col-lg-8">
-        
+        {% for p in blog %}
         <!-- Single Blog Item -->
-        <div class="single-blog-item style-2 d-flex flex-wrap align-items-center mb-50">
-          {% for p in blog %}
-          <!-- Blog Thumbnail -->
-          <div class="blog-thumbnail">
-            <a href="#">
-              <img src="{{ p.imagen.url }}" alt="">
-            </a>
+        <div class="row no-gutters">
+          <div class="col-md-6">
+            <img src="{{ p.imagen.url }}" class="card-img" alt="...">
           </div>
-          <!-- Blog Content -->
-          <div class="blog-content">
-            <a href="#" class="post-title">{{ p.titulo }}</a>
-            <p>{{ p.descripcion }}</p>
-            <div class="post-meta">
-              <a href="#"><i class="icon_clock_alt"></i>{{ p.fecha }}</a>
+          <div class="col-md-6">
+            <div class="card-body">
+              <h5 class="card-title">{{ p.titulo }}</h5>
+              <p class="card-text">{{ p.descripcion }}</p>
+              <p class="card-text"><small class="text-muted">{{ p.fecha }}</small></p>
             </div>
           </div>
-          {% endfor %}
         </div>
-        
+        {% endfor %}
+
+
+
+
+
 
         <!-- Pagination -->
         <nav class="dento-pagination mb-100">
@@ -37,44 +36,45 @@
         </nav>
       </div>
 
+
       <!-- Dento Sidebar Area -->
-      <div class="col-12 col-lg-4">
-        <div class="dento-sidebar">
-          
+      <div class="col-8 col-lg-4 float-right ">
+        <div class="dento-sidebar ">
+
           <!-- Single Widget Area -->
-          <div class="single-widget-area news-widget">
-            <h5 class="widget-title">LOS MÁS DESTACADOS</h5>
+          <div class="single-widget-area news-widget  ">
+            <h5 class="widget-title  ">LOS MÁS DESTACADOS</h5>
 
             <!-- Single News Area -->
-            <div class="single-news-area d-flex align-items-center">
-              <div class="blog-thumbnail">
-                <img src="./img/bg-img/21.jpg" alt="">
+            <div class="single-news-area d-flex align-items-center ">
+              <div class="blog-thumbnail ">
+                <img src="./img/bg-img/21.jpg " alt=" ">
               </div>
-              <div class="blog-content">
-                <a href="#" class="post-title">Tooth decay: why good dental hygiene is important</a>
-                <span class="post-date">28 Sep 2018</span>
+              <div class="blog-content ">
+                <a href="# " class="post-title ">Tooth decay: why good dental hygiene is important</a>
+                <span class="post-date ">28 Sep 2018</span>
               </div>
             </div>
 
             <!-- Single News Area -->
-            <div class="single-news-area d-flex align-items-center">
-              <div class="blog-thumbnail">
-                <img src="./img/bg-img/22.jpg" alt="">
+            <div class="single-news-area d-flex align-items-center ">
+              <div class="blog-thumbnail ">
+                <img src="./img/bg-img/22.jpg " alt=" ">
               </div>
-              <div class="blog-content">
-                <a href="#" class="post-title">Six reasons your breath might smell like poop</a>
-                <span class="post-date">28 Sep 2018</span>
+              <div class="blog-content ">
+                <a href="# " class="post-title ">Six reasons your breath might smell like poop</a>
+                <span class="post-date ">28 Sep 2018</span>
               </div>
             </div>
 
             <!-- Single News Area -->
-            <div class="single-news-area d-flex align-items-center">
-              <div class="blog-thumbnail">
-                <img src="./img/bg-img/23.jpg" alt="">
+            <div class="single-news-area d-flex align-items-center ">
+              <div class="blog-thumbnail ">
+                <img src="./img/bg-img/23.jpg " alt=" ">
               </div>
-              <div class="blog-content">
-                <a href="#" class="post-title">Everything you need to know about sinus infection</a>
-                <span class="post-date">28 Sep 2018</span>
+              <div class="blog-content ">
+                <a href="# " class="post-title ">Everything you need to know about sinus infection</a>
+                <span class="post-date ">28 Sep 2018</span>
               </div>
             </div>
           </div>
@@ -84,6 +84,7 @@
     </div>
   </div>
 </section>
+
 <!-- *****Blog Area End ***** -->
 
 
