--- a/proyecto/templates/app/blog.html
+++ b/proyecto/templates/app/blog.html
@@ -29,15 +29,15 @@
           <ul class="pagination">
             <li class="page-item active">
               {% if page_obj.has_previous %}
-              <a class="page-link" href="?page={{page_obj.previous_page_number}}">1</a>
+              <a class="page-link" href="?page={{page_obj.previous_page_number}}"><i class="fa fa-angle-left"></i></a>
               {% endif %}
             </li>
             <li class="page-item">
               {% if page_obj.has_next %}
-              <a class="page-link" href="?page={{page_obj.next_page_number}}">2</a>
+              <a class="page-link" href="?page={{page_obj.next_page_number}}"><i class="fa fa-angle-right"></i></a>
               {% endif %}
             </li>
-            <li class="page-item"><a class="page-link" href="#"><i class="fa fa-angle-right"></i></a></li>
+            
           </ul>
         </nav>
       </div>
@@ -50,14 +50,15 @@
 
           <!-- Single Widget Area -->
           <div class="single-widget-area news-widget mt-4">
+          
             <h5 class="widget-title ">LOS MÁS DESTACADOS</h5>
 
             <!-- Single News Area -->
 
 
-            {% for p in blog %}
+            {% for p in destacados %}
             <div class="single-news-area d-flex align-items-center">
-              {% if p.destacados == True %}
+              
               <div class="blog-thumbnail mb-3">
                 <img class="imgdesta" src="{{ p.imagen.url }}" alt=" ">
               </div>
@@ -69,7 +70,7 @@
                 <span class="post-date ">{{ p.fecha }}</span>
 
               </div>
-              {% endif%}
+              
             </div>
             {% endfor %}
           </div>
