Traduccion (es-en) Barra de navegacion

--- a/proyecto/templates/app/blog.html
+++ b/proyecto/templates/app/blog.html
@@ -1,6 +1,6 @@
-{% extends 'app/index.html' %} {% load static %} {% load bootstrap4 %} {% block content%}
+{% extends 'app/index.html' %} {% load static %} {% load bootstrap4 %} {% load i18n %}
 
-
+{% block content%}
 <section class="dento-blog-area mt-50">
   <div class="container  ">
     <div class="row">
