--- a/proyecto/templates/app/index.html
+++ b/proyecto/templates/app/index.html
@@ -33,8 +33,8 @@
         </i></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="nav navbar-nav ml-auto">
+    <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
+      <ul class="nav navbar-nav">
 
         <li class="nav-item">
           <a class="nav-link" href="#">{% trans 'SOBRE MÍ' %}</a>
@@ -56,15 +56,15 @@
           <a class="nav-link" href="#">{% trans 'TESTIMONIOS' %}</a>
         </li>
 
-        <li>
+        <li class="bandera">
           {% language 'es' %}
-          <a href="{% url 'app:index' %}"> Español </a>
+          <a href="{% url 'app:index' %}"><img src="{% static 'img/banderaES.jpg' %}"></a>
           {% endlanguage %}
         </li>
 
-        <li>
+        <li class="bandera ml-2">
           {% language 'en' %}
-          <a href="{% url 'app:index' %}"> English </a>
+          <a href="{% url 'app:index' %}"><img src="{% static 'img/banderaEN.jpg' %}"></a>
           {% endlanguage %}
         </li>
       </ul>
@@ -124,23 +124,57 @@
 
         // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.
   </script> {% endcomment %}
-
+<br><br>
   {% for p in mi %}
+  <div class="wrapper row3">
+    <main class="hoc container-fluid clear"> 
+      <!-- main body -->
+      
+      <div class="sectiontitle">
+        <h6 class="heading">{{ p.tituloCentro }}</h6>
+        <p>Quis mollis sit amet semper eget nulla cras tellus purus tincidunt</p>
+      </div>
+      <article class="group">
+        <div class="one_half first">
+          <h6 class="heading">{{ p.tituloCentro }}</h6>
+          <p>{{ p.textoCentro }}</p>         
+        </div>
+        <div class="one_half"><a class="imgover" href="#"><img src="{{ p.imagenCentro.url }}" alt=""></a></div>
+      </article>
+  
+    </main>
+  </div>
 
-
-  <div class="container-fluid contenedor">
+<!--   <div class="container-fluid contenedor">
     <img class="imagenCentro float-left mr-5" src="{{ p.imagenCentro.url }}">
     <h5 class="titulo_centro" href="{% url 'app:sobremi' %}">{{ p.tituloCentro }}</h5><br>
     <h5 class="texto_centro" href="{% url 'app:sobremi' %}">{{ p.textoCentro }}</h5>
-  </div>
-  <div class="row container-fluid perfil d-flex align-items-center">
+  </div> -->
+
+<!--<div class="row container-fluid perfil d-flex align-items-center">
     <div class="col-sm-8">
       <h5 class="tituloPerfil" href="{% url 'app:sobremi' %} ">{{ p.tituloPerfil }}</h5>
       <h5 class="texto_perfil float-left mr-5" href="{% url 'app:sobremi' %} "></br>{{ p.textoPerfil }}</h5>
     </div>
     <img class="col-sm-2 imagenPerfil rounded-circle" src="{{ p.imagenPerfil.url }}">
-  </div>
+  </div> -->
 
+  <div class="bgded overlay">
+    <section id="testimonials" class="hoc container-fluid clear"> 
+      <div class="sectiontitle">
+        <h6 class="heading font-x2">SOBRE MÍ</h6>
+      </div>
+      <article class="one_half first">
+        <figure class="clear"><img src="{{ p.imagenPerfil.url }}" alt="">
+          <figcaption>
+            <h6 class="heading">{{ p.tituloPerfil }}</h6>
+            <em>Conubia nostra per inceptos</em></figcaption>
+        </figure>
+        <blockquote>{{ p.textoPerfil }}</blockquote>
+      </article>
+    </section>
+  </div>
+  
   <div class="container-fluid  footer mr-5 iconos">
 
     <h6 class="text-uppercase font-weight-bold mr-5">Contacto</h6>
